fixes read me title

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>iUPB Workplaces API - Happy to welcome you! :)</title>
+    <title>iUPB Transportation API - Happy to welcome you! :)</title>
     <style type="text/css" media="screen">
       body {
         margin: 0;
@@ -49,7 +49,8 @@
       }
 
       #footer {
-		margin-left: 50px;
+        font-size:10px;
+		    margin-left: 50px;
         clear: both;
       }
 
@@ -188,7 +189,7 @@
 
       <div id="content">
         <div id="header">
-          <h1>iUPB Workplaces API</h1>
+          <h1>iUPB Transportation API</h1>
           <h2>You&rsquo;re using a RESTful HyperMedia System by <a href="http://www.yippie.io">yippie.io</a>!</h2>
         </div>
 
